--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 East Africa Consultants
 </h1>
 </head>
-<body><p style="text-align:center;"font-size:20px">"Site under construction."</p>
+<body>
+  <p style="text-align:center;"font-size:20px">Site under construction</p>
+                                                                       
 </body>
 </html>
